fix some dark mode colors
fixes #245

--- a/client-vue/src/assets/_darkmode.scss
+++ b/client-vue/src/assets/_darkmode.scss
@@ -273,10 +273,13 @@ body.is-dark {
     --notice-color: #d7d7d7;
 
     --gamelist-favourite: #278242;
+    --gamelist-current: #732828;
 
     --modal-background-color: #444;
 
     --field-group-background-color: #525252;
+
+    --template-preview-background-color: #444;
 }
 
 body.is-hotdogstand {
@@ -340,7 +343,12 @@ body.is-basalt {
     --notice-background-color: #484848;
     --notice-color: #d7d7d7;
 
+    --gamelist-favourite: #278242;
+    --gamelist-current: #732828;
+
     --modal-background-color: #444;
 
     --field-group-background-color: #525252;
+
+    --template-preview-background-color: #444;
 }
