--- a/client-vue/src/assets/_form.scss
+++ b/client-vue/src/assets/_form.scss
@@ -89,7 +89,7 @@
 .template-preview {
     padding: 0.7em 1em;
     margin: 0.5em 0;
-    background-color: #eee;
+    background-color: var(--template-preview-background-color);
     border-radius: 0.5em;
 }
 
